tests/errors/references/lambda_captures_env_const_mut_fn.duck
fn main() {
    const a = 100;
    const f = mut fn () {
        a = 200;
    };
}
